MAINT: Fix letter-spacing

--- a/sass/web.magazin/modules/teaser/_teaser.sass
+++ b/sass/web.magazin/modules/teaser/_teaser.sass
@@ -23,7 +23,7 @@
 	display: block
 	font-size: $font-s
 	font-weight: normal
-	letter-spacing: $hair
+	letter-spacing: $letter-spacing-l
 
 %teaser__title-box
 	align-items: center
